--- a/pom.xml
+++ b/pom.xml
@@ -43,5 +43,10 @@
             <artifactId>spring-test</artifactId>
             <version>4.1.2.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
     </dependencies>
 </project>
